--- a/index.htm
+++ b/index.htm
@@ -2,12 +2,24 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="menubar.css">
   <script src="index.js"></script>
   <title>Enactus IIT Delhi</title>
 </head>
 
 <body>
+  <div class="menu-block">
+    <ul>
+      <li><a>HOME</a></li>
+      <li><a>ABOUT</a></li>
+      <li><a>VENTURES</a></li>
+      <li><a>ACHIEVEMENTS</a></li>
+      <li><a>OUR TEAM</a></li>
+      <li id="donate"><a>DONATE</a></li>
+    </ul>
+
+  </div>
 </body>
 
 </html>
